Update Scalariform version 0.0.9 -> 0.1.0

--- a/etc/manual.ltx
+++ b/etc/manual.ltx
@@ -295,10 +295,15 @@ Customize the behavior of the source formatter. All Scalariform preferences are 
   {\bf :indentLocalDefs} & t or nil  \\ \hline
   {\bf :indentPackageBlocks} & t or nil  \\ \hline
   {\bf :indentSpaces} & 1-10  \\ \hline
+  {\bf :indentWithTabs} & t or nil  \\ \hline
+  {\bf :multilineScaladocCommentsStartOnFirstLine} & t or nil  \\ \hline
   {\bf :preserveDanglingCloseParenthesis} & t or nil \\ \hline
   {\bf :preserveSpaceBeforeArguments} & t or nil  \\ \hline
   {\bf :rewriteArrowSymbols} & t or nil  \\ \hline
   {\bf :spaceBeforeColon} & t or nil  \\ \hline
+  {\bf :spaceInsideBrackets} & t or nil  \\ \hline
+  {\bf :spaceInsideParentheses} & t or nil  \\ \hline
+  {\bf :spacesWithinPatternBinders} & t or nil  \\ \hline 
 \end{tabular}
 
 \vspace{5 mm}
